--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -1,2 +1,6 @@
 # External packages
 source "$BR2_EXTERNAL_THINROOT_PATH/Config.ext.in"
+
+menu "Additional software"
+  source "$BR2_EXTERNAL_THINROOT_PATH/package/qutselect/Config.in"
+endmenu
