--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -3,4 +3,5 @@ source "$BR2_EXTERNAL_THINROOT_PATH/Config.ext.in"
 
 menu "Additional software"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/qutselect/Config.in"
+  source "$BR2_EXTERNAL_THINROOT_PATH/package/thinlinc/Config.in"
 endmenu
