--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -1,5 +1,8 @@
 BR2_x86_64=y
 BR2_DL_DIR="$(TOPDIR)/../download"
+BR2_KERNEL_MIRROR="https://www.kernel.org/pub"
+BR2_GNU_MIRROR="http://ftp.gnu.org/pub/gnu"
+BR2_OPTIMIZE_2=y
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_THINROOT_PATH)/patches"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_19=y
@@ -8,13 +11,13 @@ BR2_GCC_ENABLE_LTO=y
 BR2_TARGET_GENERIC_HOSTNAME="thinroot"
 BR2_TARGET_GENERIC_ISSUE="Welcome to thinRoot"
 BR2_TARGET_GENERIC_PASSWD_SHA512=y
-BR2_INIT_SYSTEMD=y
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
+BR2_TARGET_GENERIC_ROOT_PASSWD="1234"
 BR2_TARGET_GENERIC_GETTY_PORT="tty1"
-# BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
 BR2_ENABLE_LOCALE_WHITELIST="C en_US de_DE"
 BR2_GENERATE_LOCALE="en_US de_DE"
 BR2_SYSTEM_ENABLE_NLS=y
-BR2_TARGET_LOCALTIME="Europe/Berlin"
+BR2_ROOTFS_USERS_TABLES="${BR2_EXTERNAL_THINROOT_PATH}/board/intel_nuc/users_table.txt"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_THINROOT_PATH)/rootfs-overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intel_nuc/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intel_nuc/post-image.sh"
@@ -22,8 +25,8 @@ BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_THINROOT_PATH)/board/intel_nuc"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="4.19.27"
-BR2_LINUX_KERNEL_DEFCONFIG="x86_64"
-BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_THINROOT_PATH)/board/intel_nuc/kernel_defconfig"
+BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_THINROOT_PATH)/board/intel_nuc/kernel_defconfig"
 BR2_LINUX_KERNEL_LZ4=y
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_LINUX_KERNEL_NEEDS_HOST_LIBELF=y
@@ -32,9 +35,15 @@ BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_PULSEAUDIO=y
-BR2_PACKAGE_JQ=y
+BR2_PACKAGE_DOSFSTOOLS=y
+BR2_PACKAGE_DOSFSTOOLS_FATLABEL=y
+BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
+BR2_PACKAGE_DOSFSTOOLS_MKFS_FAT=y
 BR2_PACKAGE_E2FSPROGS=y
+BR2_PACKAGE_E2FSPROGS_E4DEFRAG=y
 BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
+BR2_PACKAGE_F2FS_TOOLS=y
+BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_SQUASHFS=y
 BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_LIBERATION=y
@@ -51,12 +60,15 @@ BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_XSERVER_XORG_SERVER=y
 BR2_PACKAGE_XAPP_SETXKBMAP=y
 BR2_PACKAGE_XAPP_XINIT=y
+BR2_PACKAGE_XAPP_XMESSAGE=y
+BR2_PACKAGE_XAPP_XPROP=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_EVDEV=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_KEYBOARD=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_MOUSE=y
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBDEV=y
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_INTEL=y
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_VESA=y
+BR2_PACKAGE_NODM=y
 BR2_PACKAGE_XTERM=y
 BR2_PACKAGE_FLUXBOX=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
@@ -67,32 +79,28 @@ BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7260=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7265D=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8265=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_9XXX=y
-BR2_PACKAGE_DT_UTILS=y
+BR2_PACKAGE_ACPID=y
+BR2_PACKAGE_EUDEV_RULES_GEN=y
 BR2_PACKAGE_GPTFDISK=y
 BR2_PACKAGE_GPTFDISK_SGDISK=y
+BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_RNG_TOOLS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_SQLITE=y
+BR2_PACKAGE_PANGO=y
+BR2_PACKAGE_LIBXML2=y
 BR2_PACKAGE_LIBCGROUP=y
 BR2_PACKAGE_LIBCGROUP_TOOLS=y
 BR2_PACKAGE_LIBDAEMON=y
 BR2_PACKAGE_ATFTP=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
-BR2_PACKAGE_DHCP=y
-BR2_PACKAGE_DHCP_CLIENT=y
+BR2_PACKAGE_CHRONY=y
 BR2_PACKAGE_DHCPCD=y
 BR2_PACKAGE_DROPBEAR=y
-# BR2_PACKAGE_DROPBEAR_CLIENT is not set
-BR2_PACKAGE_IPTABLES=y
-BR2_PACKAGE_NETWORK_MANAGER=y
-BR2_PACKAGE_NETWORK_MANAGER_MODEM_MANAGER=y
-BR2_PACKAGE_WGET=y
-BR2_PACKAGE_BASH=y
+BR2_PACKAGE_XINETD=y
 BR2_PACKAGE_TINI=y
-# BR2_PACKAGE_SYSTEMD_HWDB is not set
-BR2_PACKAGE_SYSTEMD_LOCALED=y
-BR2_PACKAGE_SYSTEMD_RANDOMSEED=y
+BR2_PACKAGE_IRQBALANCE=y
 BR2_PACKAGE_UTIL_LINUX_MOUNTPOINT=y
 BR2_PACKAGE_UTIL_LINUX_PARTX=y
 BR2_PACKAGE_UTIL_LINUX_PIVOT_ROOT=y
