--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -69,6 +69,7 @@ BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBDEV=y
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_INTEL=y
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_VESA=y
 BR2_PACKAGE_NODM=y
+BR2_PACKAGE_XDOTOOL=y
 BR2_PACKAGE_XTERM=y
 BR2_PACKAGE_FLUXBOX=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
@@ -113,3 +114,4 @@ BR2_PACKAGE_HOST_E2FSPROGS=y
 BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_QUTSELECT=y
 BR2_PACKAGE_THINLINC=y
+BR2_PACKAGE_HOTKEYD=y
