--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -2,10 +2,11 @@ BR2_x86_64=y
 BR2_DL_DIR="$(TOPDIR)/../download"
 BR2_KERNEL_MIRROR="https://www.kernel.org/pub"
 BR2_GNU_MIRROR="http://ftp.gnu.org/pub/gnu"
-BR2_OPTIMIZE_2=y
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_THINROOT_PATH)/patches"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_19=y
+BR2_BINUTILS_VERSION_2_32_X=y
+BR2_GCC_VERSION_8_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_LTO=y
 BR2_TARGET_GENERIC_HOSTNAME="thinroot"
@@ -24,7 +25,7 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intel_nuc/post
 BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_THINROOT_PATH)/board/intel_nuc"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="4.19.31"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="4.19.55"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_THINROOT_PATH)/board/intel_nuc/kernel_defconfig"
 BR2_LINUX_KERNEL_LZ4=y
