--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -32,6 +32,7 @@ BR2_LINUX_KERNEL_LZ4=y
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_LINUX_KERNEL_NEEDS_HOST_LIBELF=y
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_THINROOT_PATH)/Busybox.config"
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
@@ -100,9 +101,11 @@ BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_CHRONY=y
 BR2_PACKAGE_DHCPCD=y
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_WGET=y
 BR2_PACKAGE_XINETD=y
 BR2_PACKAGE_TINI=y
 BR2_PACKAGE_IRQBALANCE=y
+BR2_PACKAGE_TAR=y
 BR2_PACKAGE_UTIL_LINUX_MOUNTPOINT=y
 BR2_PACKAGE_UTIL_LINUX_PARTX=y
 BR2_PACKAGE_UTIL_LINUX_PIVOT_ROOT=y
