implemented a thinstation-like netfiles PXE loading mechanism and implemented an environment variable loading mechanism that allows to have a global ENV environment where applications can react on. Also fixed the ThinLinc execution to get a first working connection from qutselect.

--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -64,6 +64,7 @@ BR2_PACKAGE_XAPP_SETXKBMAP=y
 BR2_PACKAGE_XAPP_XINIT=y
 BR2_PACKAGE_XAPP_XMESSAGE=y
 BR2_PACKAGE_XAPP_XPROP=y
+BR2_PACKAGE_XAPP_XRANDR=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_EVDEV=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_KEYBOARD=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_MOUSE=y
