--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -18,6 +18,8 @@ BR2_TARGET_GENERIC_GETTY_PORT="tty1"
 BR2_ENABLE_LOCALE_WHITELIST="C en_US de_DE"
 BR2_GENERATE_LOCALE="en_US de_DE"
 BR2_SYSTEM_ENABLE_NLS=y
+BR2_TARGET_TZ_INFO=y
+BR2_TARGET_LOCALTIME="Europe/Berlin"
 BR2_ROOTFS_USERS_TABLES="${BR2_EXTERNAL_THINROOT_PATH}/board/intel_nuc/users_table.txt"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_THINROOT_PATH)/rootfs-overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intel_nuc/post-build.sh"
