added usbmount package to allow users to mount external drives.

--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -91,6 +91,7 @@ BR2_PACKAGE_GPTFDISK=y
 BR2_PACKAGE_GPTFDISK_SGDISK=y
 BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_RNG_TOOLS=y
+BR2_PACKAGE_USBMOUNT=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_SQLITE=y
 BR2_PACKAGE_PANGO=y
