--- a/buildroot-external/board/intel_nuc/kernel_defconfig
+++ b/buildroot-external/board/intel_nuc/kernel_defconfig
@@ -36,13 +36,13 @@ CONFIG_EFI_STUB=y
 CONFIG_HZ_1000=y
 CONFIG_KEXEC=y
 CONFIG_CRASH_DUMP=y
-CONFIG_HIBERNATION=y
-CONFIG_PM_DEBUG=y
-CONFIG_PM_TRACE_RTC=y
+# CONFIG_ACPI_BATTERY is not set
 CONFIG_ACPI_VIDEO=y
 CONFIG_ACPI_DOCK=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_X86_ACPI_CPUFREQ=y
 CONFIG_PCIEPORTBUS=y
 CONFIG_HOTPLUG_PCI=y
