tune X11 server configuration within the netfiles setup job.

--- a/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/00-keyboard.conf
+++ b/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/00-keyboard.conf
@@ -5,4 +5,5 @@ Section "InputClass"
 	Option "XkbVariant" "nodeadkeys"
 	Option "XkbLayout" "de,us"
 	Option "XkbOptions" "grp:sclk_toggle,grp_led:scroll"
+	Option "AutoRepeat" "500 30"
 EndSection
