--- a/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/10-serverlayout.conf
+++ b/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/10-serverlayout.conf
@@ -5,6 +5,6 @@ Section "ServerLayout"
 	Option "StandbyTime"  "30"
 	Option "SuspendTime"  "60"
 	Option "OffTime"      "120"
-	Option "DontVTSwitch" "FALSE"
+	Option "DontVTSwitch" "TRUE"
 	Option "DontZap"      "TRUE"
 EndSection
