--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -105,6 +105,9 @@ BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_CHRONY=y
 BR2_PACKAGE_DHCPCD=y
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_NTP=y
+# BR2_PACKAGE_NTP_NTPD is not set
+BR2_PACKAGE_NTP_NTPDATE=y
 BR2_PACKAGE_WGET=y
 BR2_PACKAGE_XINETD=y
 BR2_PACKAGE_TINI=y
@@ -123,3 +126,4 @@ BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_QUTSELECT=y
 BR2_PACKAGE_THINLINC=y
 BR2_PACKAGE_HOTKEYD=y
+BR2_PACKAGE_NUMLOCKX=y
