--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -6,4 +6,5 @@ menu "Additional software"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/thinlinc/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/hotkeyd/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/numlockx/Config.in"
+  source "$BR2_EXTERNAL_THINROOT_PATH/package/xprintidle/Config.in"
 endmenu
