--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -62,11 +62,13 @@ BR2_PACKAGE_PSPLASH_PATCH="$(BR2_EXTERNAL_THINROOT_PATH)/patches/psplash/thinroo
 BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
 BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_XSERVER_XORG_SERVER=y
+BR2_PACKAGE_XLIB_LIBXSCRNSAVER=y
 BR2_PACKAGE_XAPP_SETXKBMAP=y
 BR2_PACKAGE_XAPP_XINIT=y
 BR2_PACKAGE_XAPP_XMESSAGE=y
 BR2_PACKAGE_XAPP_XPROP=y
 BR2_PACKAGE_XAPP_XRANDR=y
+BR2_PACKAGE_XAPP_XSET=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_EVDEV=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_KEYBOARD=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_MOUSE=y
@@ -127,3 +129,4 @@ BR2_PACKAGE_QUTSELECT=y
 BR2_PACKAGE_THINLINC=y
 BR2_PACKAGE_HOTKEYD=y
 BR2_PACKAGE_NUMLOCKX=y
+BR2_PACKAGE_XPRINTIDLE=y
