we switch from fluxbox to openbox for our global window manager because openbox seems to be more suitable especially in terms of multi-monitor support. However, we still need to patch openbox to not be compiled with XINERAMA support or otherwise the thinlinc client doesn't work as expected with our xrandr setup.

--- a/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/10-serverlayout.conf
+++ b/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/10-serverlayout.conf
@@ -7,4 +7,5 @@ Section "ServerLayout"
 	Option "OffTime"      "120"
 	Option "DontVTSwitch" "TRUE"
 	Option "DontZap"      "TRUE"
+	Option "Xinerama"     "0"
 EndSection
