--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -68,7 +68,7 @@ BR2_PACKAGE_XAPP_XINIT=y
 BR2_PACKAGE_XAPP_XMESSAGE=y
 BR2_PACKAGE_XAPP_XPROP=y
 BR2_PACKAGE_XAPP_XRANDR=y
-BR2_PACKAGE_XAPP_XSET=y
+BR2_PACKAGE_XAPP_XSETROOT=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_EVDEV=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_KEYBOARD=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_MOUSE=y
@@ -77,8 +77,7 @@ BR2_PACKAGE_XDRIVER_XF86_VIDEO_INTEL=y
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_VESA=y
 BR2_PACKAGE_NODM=y
 BR2_PACKAGE_XDOTOOL=y
-BR2_PACKAGE_XTERM=y
-BR2_PACKAGE_FLUXBOX=y
+BR2_PACKAGE_OPENBOX=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_I915=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3160=y
@@ -95,8 +94,6 @@ BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_RNG_TOOLS=y
 BR2_PACKAGE_USBMOUNT=y
 BR2_PACKAGE_CA_CERTIFICATES=y
-BR2_PACKAGE_PANGO=y
-BR2_PACKAGE_LIBXML2=y
 BR2_PACKAGE_LIBCGROUP=y
 BR2_PACKAGE_LIBCGROUP_TOOLS=y
 BR2_PACKAGE_LIBDAEMON=y
