--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -13,8 +13,8 @@ BR2_TARGET_GENERIC_HOSTNAME="thinroot"
 BR2_TARGET_GENERIC_ISSUE="Welcome to thinRoot"
 BR2_TARGET_GENERIC_PASSWD_SHA512=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
-BR2_TARGET_GENERIC_ROOT_PASSWD="1234"
-BR2_TARGET_GENERIC_GETTY_PORT="tty1"
+# BR2_TARGET_ENABLE_ROOT_LOGIN is not set
+BR2_TARGET_GENERIC_GETTY_PORT="tty2"
 BR2_ENABLE_LOCALE_WHITELIST="C en_US de_DE"
 BR2_GENERATE_LOCALE="en_US de_DE"
 BR2_SYSTEM_ENABLE_NLS=y
@@ -37,18 +37,14 @@ BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_THINROOT_PATH)/Busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
-BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_PULSEAUDIO=y
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_FATLABEL=y
 BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
-BR2_PACKAGE_DOSFSTOOLS_MKFS_FAT=y
 BR2_PACKAGE_E2FSPROGS=y
-BR2_PACKAGE_E2FSPROGS_E4DEFRAG=y
-BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
+BR2_PACKAGE_EXFAT=y
 BR2_PACKAGE_F2FS_TOOLS=y
 BR2_PACKAGE_NTFS_3G=y
-BR2_PACKAGE_SQUASHFS=y
 BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_LIBERATION=y
 BR2_PACKAGE_FREERDP=y
@@ -63,63 +59,44 @@ BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
 BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_XSERVER_XORG_SERVER=y
 BR2_PACKAGE_XLIB_LIBXSCRNSAVER=y
-BR2_PACKAGE_XAPP_SETXKBMAP=y
-BR2_PACKAGE_XAPP_XINIT=y
-BR2_PACKAGE_XAPP_XMESSAGE=y
+BR2_PACKAGE_XLIB_LIBXAW=y
 BR2_PACKAGE_XAPP_XPROP=y
 BR2_PACKAGE_XAPP_XRANDR=y
 BR2_PACKAGE_XAPP_XSETROOT=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_EVDEV=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_KEYBOARD=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_MOUSE=y
-BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBDEV=y
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_INTEL=y
-BR2_PACKAGE_XDRIVER_XF86_VIDEO_VESA=y
+BR2_PACKAGE_XFONT_FONT_MISC_CYRILLIC=y
 BR2_PACKAGE_NODM=y
 BR2_PACKAGE_XDOTOOL=y
 BR2_PACKAGE_OPENBOX=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_I915=y
-BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3160=y
-BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3168=y
-BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7260=y
-BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7265D=y
-BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8265=y
-BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_9XXX=y
+BR2_PACKAGE_LINUX_FIRMWARE_RADEON=y
 BR2_PACKAGE_ACPID=y
+BR2_PACKAGE_DBUS=y
 BR2_PACKAGE_EUDEV_RULES_GEN=y
-BR2_PACKAGE_GPTFDISK=y
-BR2_PACKAGE_GPTFDISK_SGDISK=y
-BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_RNG_TOOLS=y
 BR2_PACKAGE_USBMOUNT=y
 BR2_PACKAGE_CA_CERTIFICATES=y
-BR2_PACKAGE_LIBCGROUP=y
-BR2_PACKAGE_LIBCGROUP_TOOLS=y
-BR2_PACKAGE_LIBDAEMON=y
-BR2_PACKAGE_ATFTP=y
-BR2_PACKAGE_BLUEZ5_UTILS=y
-BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
+BR2_PACKAGE_READLINE=y
 BR2_PACKAGE_CHRONY=y
 BR2_PACKAGE_DHCPCD=y
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_NTP=y
 # BR2_PACKAGE_NTP_NTPD is not set
 BR2_PACKAGE_NTP_NTPDATE=y
 BR2_PACKAGE_WGET=y
-BR2_PACKAGE_XINETD=y
-BR2_PACKAGE_TINI=y
 BR2_PACKAGE_IRQBALANCE=y
 BR2_PACKAGE_TAR=y
-BR2_PACKAGE_UTIL_LINUX_MOUNTPOINT=y
-BR2_PACKAGE_UTIL_LINUX_PARTX=y
-BR2_PACKAGE_UTIL_LINUX_PIVOT_ROOT=y
-BR2_PACKAGE_UTIL_LINUX_ZRAMCTL=y
 BR2_TARGET_ROOTFS_CPIO_LZ4=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_E2FSPROGS=y
+BR2_PACKAGE_HOST_MKPASSWD=y
 BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_QUTSELECT=y
 BR2_PACKAGE_THINLINC=y
