added CONFIG_SND_USB_AUDIO to enabled USB Audio sound.

--- a/buildroot-external/board/intel_nuc/kernel_defconfig
+++ b/buildroot-external/board/intel_nuc/kernel_defconfig
@@ -222,6 +222,7 @@ CONFIG_SND_HDA_CODEC_CA0132=m
 CONFIG_SND_HDA_CODEC_CMEDIA=m
 CONFIG_SND_HDA_CODEC_SI3054=m
 CONFIG_SND_HDA_POWER_SAVE_DEFAULT=1
+CONFIG_SND_USB_AUDIO=y
 CONFIG_HIDRAW=y
 CONFIG_HID_GYRATION=y
 CONFIG_LOGITECH_FF=y
