added noipv4ll option to /etc/dhcpcd.conf to stop IPv4LL address requests upon bootup.

--- a/buildroot-external/rootfs-overlay/etc/dhcpcd.conf
+++ b/buildroot-external/rootfs-overlay/etc/dhcpcd.conf
@@ -44,6 +44,9 @@ slaac private
 waitip 4
 timeout 0
 
+# don't allow ipv4ll
+noipv4ll
+
 # make sure dhcpcd is requesting the hostname
 # from the DHCP server and set it accordingly.
 env force_hostname=YES
