--- a/buildroot-external/rootfs-overlay/etc/usbmount/usbmount.conf
+++ b/buildroot-external/rootfs-overlay/etc/usbmount/usbmount.conf
@@ -46,7 +46,7 @@ MOUNTOPTIONS="noexec,nodev,noatime,nodiratime,uid=1001,gid=1002,umask=022"
 # For example, "-fstype=vfat,gid=floppy,dmask=0007,fmask=0117" would add
 # the options "gid=floppy,dmask=0007,fmask=0117" when a vfat filesystem
 # is mounted.
-FS_MOUNTOPTIONS=""
+FS_MOUNTOPTIONS="-fstype=vfat,utf8"
 
 # If set to "yes", more information will be logged via the syslog
 # facility.
