--- a/buildroot-external/rootfs-overlay/etc/usbmount/usbmount.conf
+++ b/buildroot-external/rootfs-overlay/etc/usbmount/usbmount.conf
@@ -14,7 +14,7 @@ MOUNTPOINTS="/media/usb0 /media/usb1 /media/usb2 /media/usb3
 
 # Filesystem types: removable storage devices are only mounted if they
 # contain a filesystem type which is in this list.
-FILESYSTEMS="vfat ext2 ext3 ext4 hfsplus ntfs-3g fuseblk exfat f2fs"
+FILESYSTEMS="vfat ext2 ext3 ext4 hfsplus ntfs exfat f2fs"
 
 #############################################################################
 # WARNING!                                                                  #
