--- a/buildroot-external/rootfs-overlay/etc/usbmount/usbmount.conf
+++ b/buildroot-external/rootfs-overlay/etc/usbmount/usbmount.conf
@@ -14,7 +14,7 @@ MOUNTPOINTS="/media/usb0 /media/usb1 /media/usb2 /media/usb3
 
 # Filesystem types: removable storage devices are only mounted if they
 # contain a filesystem type which is in this list.
-FILESYSTEMS="vfat ext2 ext3 ext4 hfsplus ntfs exfat f2fs"
+FILESYSTEMS="vfat ntfs fuseblk ext2 ext3 ext4 hfsplus exfat f2fs"
 
 #############################################################################
 # WARNING!                                                                  #
@@ -46,7 +46,7 @@ MOUNTOPTIONS="noexec,nodev,noatime,nodiratime,uid=1001,gid=1002,umask=022"
 # For example, "-fstype=vfat,gid=floppy,dmask=0007,fmask=0117" would add
 # the options "gid=floppy,dmask=0007,fmask=0117" when a vfat filesystem
 # is mounted.
-FS_MOUNTOPTIONS="-fstype=vfat,utf8"
+FS_MOUNTOPTIONS="-fstype=vfat,utf8 -fstype=ntfs-3g,nls=utf8 -fstype=fuseblk,nls=utf8"
 
 # If set to "yes", more information will be logged via the syslog
 # facility.
