--- a/buildroot-external/rootfs-overlay/etc/usbmount/usbmount.conf
+++ b/buildroot-external/rootfs-overlay/etc/usbmount/usbmount.conf
@@ -35,7 +35,7 @@ FILESYSTEMS="vfat ntfs fuseblk ext2 ext3 ext4 hfsplus exfat f2fs"
 #############################################################################
 # Mount options: Options passed to the mount command with the -o flag.
 # See the warning above regarding removing "sync" from the options.
-MOUNTOPTIONS="noexec,nodev,noatime,nodiratime,uid=1001,gid=1002,umask=022"
+MOUNTOPTIONS="noexec,nodev,noatime,nodiratime"
 
 # Filesystem type specific mount options: This variable contains a space
 # separated list of strings, each which the form "-fstype=TYPE,OPTIONS".
@@ -46,7 +46,7 @@ MOUNTOPTIONS="noexec,nodev,noatime,nodiratime,uid=1001,gid=1002,umask=022"
 # For example, "-fstype=vfat,gid=floppy,dmask=0007,fmask=0117" would add
 # the options "gid=floppy,dmask=0007,fmask=0117" when a vfat filesystem
 # is mounted.
-FS_MOUNTOPTIONS="-fstype=vfat,utf8 -fstype=ntfs-3g,nls=utf8 -fstype=fuseblk,nls=utf8"
+FS_MOUNTOPTIONS="-fstype=vfat,utf8,uid=1001,gid=1004,umask=022 -fstype=ntfs-3g,nls=utf8,uid=1001,gid=1004,umask=022 -fstype=fuseblk,nls=utf8,uid=1001,gid=1004,umask=022"
 
 # If set to "yes", more information will be logged via the syslog
 # facility.
