added support for Intel NUC10xxxx systems by directly using the intel provided e1000e network driver version 3.8.4 which comes with support for the I219-V chipset the intel NUC10 generation uses for their ethernet network.

--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -7,4 +7,5 @@ menu "Additional software"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/hotkeyd/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/numlockx/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/xprintidle/Config.in"
+  source "$BR2_EXTERNAL_THINROOT_PATH/package/intel-e1000e/Config.in"
 endmenu
