--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -77,6 +77,7 @@ BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7265D=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8000C=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8265=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_9XXX=y
+BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_QUZ=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_8169=y
 BR2_PACKAGE_ACPID=y
 BR2_PACKAGE_EUDEV_RULES_GEN=y
