--- a/buildroot-external/configs/intel_nuc_defconfig
+++ b/buildroot-external/configs/intel_nuc_defconfig
@@ -1,4 +1,5 @@
 BR2_x86_64=y
+BR2_x86_corei7_avx=y
 BR2_DL_DIR="$(TOPDIR)/../download"
 BR2_KERNEL_MIRROR="https://www.kernel.org/pub"
 BR2_GNU_MIRROR="http://ftp.gnu.org/pub/gnu"
@@ -24,7 +25,7 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intel_nuc/post
 BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_THINROOT_PATH)/board/intel_nuc"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.4.56"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.4.80"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_THINROOT_PATH)/board/intel_nuc/kernel_defconfig"
 BR2_LINUX_KERNEL_LZ4=y
@@ -34,6 +35,9 @@ BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_THINROOT_PATH)/Busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
+BR2_PACKAGE_FFMPEG=y
+# BR2_PACKAGE_FFMPEG_FFMPEG is not set
+BR2_PACKAGE_FFMPEG_XCBGRAB=y
 BR2_PACKAGE_PULSEAUDIO=y
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_FATLABEL=y
@@ -58,6 +62,7 @@ BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_XSERVER_XORG_SERVER=y
 BR2_PACKAGE_XLIB_LIBXSCRNSAVER=y
 BR2_PACKAGE_XLIB_LIBXAW=y
+BR2_PACKAGE_XLIB_LIBXV=y
 BR2_PACKAGE_XAPP_XPROP=y
 BR2_PACKAGE_XAPP_XRANDR=y
 BR2_PACKAGE_XAPP_XSETROOT=y
@@ -84,6 +89,7 @@ BR2_PACKAGE_EUDEV_RULES_GEN=y
 BR2_PACKAGE_RNG_TOOLS=y
 BR2_PACKAGE_USBMOUNT=y
 BR2_PACKAGE_CA_CERTIFICATES=y
+BR2_PACKAGE_LIBUSB=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_OBEX=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
