--- a/buildroot-external/board/intelnuc-pxe/kernel_defconfig
+++ b/buildroot-external/board/intelnuc-pxe/kernel_defconfig
@@ -24,6 +24,7 @@ CONFIG_EXPERT=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
 CONFIG_SMP=y
+CONFIG_X86_INTEL_LPSS=y
 CONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS=y
 CONFIG_MICROCODE_AMD=y
 CONFIG_X86_MSR=y
@@ -47,7 +48,6 @@ CONFIG_INTEL_IDLE=y
 CONFIG_IA32_EMULATION=y
 CONFIG_EFI_VARS=y
 # CONFIG_VIRTUALIZATION is not set
-CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
@@ -169,6 +169,7 @@ CONFIG_E100=y
 CONFIG_E1000=y
 # CONFIG_E1000E is not set
 CONFIG_IGB=y
+CONFIG_IGC=y
 CONFIG_SKY2=y
 CONFIG_FORCEDETH=y
 CONFIG_8139TOO=y
@@ -184,7 +185,6 @@ CONFIG_INPUT_TABLET=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_INPUT_MISC=y
 # CONFIG_LEGACY_PTYS is not set
-CONFIG_SERIAL_NONSTANDARD=y
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
 CONFIG_SERIAL_8250_NR_UARTS=32
@@ -193,6 +193,7 @@ CONFIG_SERIAL_8250_MANY_PORTS=y
 CONFIG_SERIAL_8250_SHARE_IRQ=y
 CONFIG_SERIAL_8250_DETECT_IRQ=y
 CONFIG_SERIAL_8250_RSA=y
+CONFIG_SERIAL_NONSTANDARD=y
 CONFIG_TTY_PRINTK=y
 CONFIG_HW_RANDOM=y
 CONFIG_NVRAM=y
@@ -289,7 +290,6 @@ CONFIG_MMC_SDHCI_ACPI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_REALTEK_PCI=y
 CONFIG_MMC_REALTEK_USB=m
-CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_CLASS_FLASH=m
 CONFIG_LEDS_BRIGHTNESS_HW_CHANGED=y
@@ -308,6 +308,8 @@ CONFIG_LEDS_TRIGGER_NETDEV=y
 CONFIG_LEDS_TRIGGER_PATTERN=y
 CONFIG_LEDS_TRIGGER_AUDIO=y
 CONFIG_EDAC=y
+CONFIG_EDAC_I7CORE=m
+CONFIG_EDAC_SBRIDGE=m
 CONFIG_RTC_CLASS=y
 CONFIG_DMADEVICES=y
 CONFIG_AMD_IOMMU=y
@@ -316,6 +318,7 @@ CONFIG_INTEL_IOMMU=y
 CONFIG_INTEL_IOMMU_SVM=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS=y
+CONFIG_RAS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_F2FS_FS=y
