--- a/buildroot-external/configs/intelnuc-pxe_defconfig
+++ b/buildroot-external/configs/intelnuc-pxe_defconfig
@@ -5,6 +5,7 @@ BR2_KERNEL_MIRROR="https://www.kernel.org/pub"
 BR2_GNU_MIRROR="http://ftp.gnu.org/pub/gnu"
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_THINROOT_PATH)/patches"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_10=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_LTO=y
 BR2_TARGET_GENERIC_HOSTNAME="thinroot"
@@ -24,7 +25,7 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc-pxe/p
 BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc-pxe"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.10.32"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.10.46"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc-pxe/kernel_defconfig"
 BR2_LINUX_KERNEL_LZ4=y
@@ -116,3 +117,4 @@ BR2_PACKAGE_HOTKEYD=y
 BR2_PACKAGE_NUMLOCKX=y
 BR2_PACKAGE_XPRINTIDLE=y
 BR2_PACKAGE_INTEL_E1000E=y
+BR2_PACKAGE_REMMINA=y
