tuned X11 default settings to make sure all modules are loaded in correct order and that we have a 32bit screen as well.

--- a/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/12-screen.conf
+++ b/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/12-screen.conf
@@ -26,4 +26,8 @@ Section "Screen"
 		Viewport   0 0
 		Depth     24
 	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     32
+	EndSubSection
 EndSection
