integrated fixes to get the basic bootup sequence running correctly for a RaspberryPi3 including booting thinroot as a initramfs purely into RAM so that we can have thinroot stations based on RaspberryPi systems in future.

--- a/buildroot-external/board/rpi3/genimage.cfg
+++ b/buildroot-external/board/rpi3/genimage.cfg
@@ -21,8 +21,16 @@ image boot.vfat {
       "u-boot.bin",
       "boot.scr"
     }
+
+    file thinroot-Image {
+      image = "Image"
+    }
+
+    file thinroot-initrd {
+      image = "rootfs.cpio.uboot"
+    }
   }
-  size = 256M
+  size = 512M
 }
 
 image sdcard.img {
@@ -34,15 +42,5 @@ image sdcard.img {
     partition-type = 0xC
     bootable = "true"
     image = "boot.vfat"
-  }
-
-  partition rootfs {
-    partition-type = 0x83
-    image = "rootfs.ext4"
-  }
-
-  partition userfs {
-    partition-type = 0x83
-    image = "userfs.ext4"
   }
 }
