--- a/buildroot-external/configs/rpi3_defconfig
+++ b/buildroot-external/configs/rpi3_defconfig
@@ -148,3 +148,7 @@ BR2_PACKAGE_HOST_MKPASSWD=y
 BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_BOOT_SCRIPT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_BOOT_SCRIPT_SOURCE="$(BR2_EXTERNAL_THINROOT_PATH)/board/rpi3/boot.cmd"
+BR2_PACKAGE_QUTSELECT=y
+BR2_PACKAGE_HOTKEYD=y
+BR2_PACKAGE_NUMLOCKX=y
+BR2_PACKAGE_XPRINTIDLE=y
