fix to get qt running correctly on a pi

--- a/buildroot-external/configs/rpi3_defconfig
+++ b/buildroot-external/configs/rpi3_defconfig
@@ -69,9 +69,9 @@ BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_VC4=y
 BR2_PACKAGE_MESA3D_OPENGL_ES=y
 BR2_PACKAGE_PSPLASH=y
 BR2_PACKAGE_PSPLASH_PATCH="$(BR2_EXTERNAL_THINROOT_PATH)/patches/psplash/hzdr"
-BR2_PACKAGE_QT5=y
+BR2_PACKAGE_QT5BASE_OPENGL=y
 BR2_PACKAGE_QT5BASE_LINUXFB=y
-BR2_PACKAGE_QT5BASE_XCB=y
+BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
 BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_XSERVER_XORG_SERVER=y
 BR2_PACKAGE_XLIB_LIBXSCRNSAVER=y
