--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -9,4 +9,5 @@ menu "Additional software"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/xprintidle/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/intel-e1000e/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/remmina/Config.in"
+  source "$BR2_EXTERNAL_THINROOT_PATH/package/rpi-eeprom/Config.in"
 endmenu
