fixed tinkerboard build.

--- a/buildroot-external/board/tinkerboard/genimage.cfg
+++ b/buildroot-external/board/tinkerboard/genimage.cfg
@@ -6,8 +6,7 @@ image boot.vfat {
       "VERSION",
       "rk3288-tinker.dtb",
       "rk3288-tinker-s.dtb",
-      "boot.scr",
-      "bootEnv.txt"
+      "boot.scr"
     }
 
     file thinroot-Image {
