modified thinlinc package to use the different platform packages depending on the CPU platform we are using. Unfortunately ThinLinc is not available for aarch64 yet, thus we only enable it for the armhf (32bit) ARM platforms.

--- a/buildroot-external/configs/tinkerboard_defconfig
+++ b/buildroot-external/configs/tinkerboard_defconfig
@@ -151,6 +151,7 @@ BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_BOOT_SCRIPT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_BOOT_SCRIPT_SOURCE="$(BR2_EXTERNAL_THINROOT_PATH)/board/tinkerboard/boot.cmd"
 BR2_PACKAGE_QUTSELECT=y
+BR2_PACKAGE_THINLINC=y
 BR2_PACKAGE_HOTKEYD=y
 BR2_PACKAGE_NUMLOCKX=y
 BR2_PACKAGE_XPRINTIDLE=y
