add default bootEnv.txt files for rpi and tinkerboard platform but with disabled entries so that users can pickup the BASE_PATH stuff on their own more easily.

--- a/buildroot-external/board/rpi3/genimage.cfg
+++ b/buildroot-external/board/rpi3/genimage.cfg
@@ -14,6 +14,7 @@ image boot.vfat {
       "bcm2837-rpi-cm3-io3.dtb",
       "cmdline.txt",
       "config.txt",
+      "bootEnv.txt",
       "rpi-firmware/bootcode.bin",
       "rpi-firmware/fixup.dat",
       "rpi-firmware/start.elf",
