--- a/buildroot-external/board/tinkerboard/genimage.cfg
+++ b/buildroot-external/board/tinkerboard/genimage.cfg
@@ -6,7 +6,8 @@ image boot.vfat {
       "VERSION",
       "rk3288-tinker.dtb",
       "rk3288-tinker-s.dtb",
-      "boot.scr"
+      "boot.scr",
+      "bootEnv.txt"
     }
 
     file thinroot-Image {
