--- a/buildroot-external/board/rpi4_32/genimage.cfg
+++ b/buildroot-external/board/rpi4_32/genimage.cfg
@@ -9,6 +9,7 @@ image boot.vfat {
       "bcm2711-rpi-cm4.dtb",
       "cmdline.txt",
       "config.txt",
+      "bootEnv.txt",
       "rpi-firmware/fixup.dat",
       "rpi-firmware/start.elf",
       "rpi-firmware/overlays",
