updated raspberrypi kernel defconfig fragements to get back correct functionality for rpi3

--- a/buildroot-external/board/rpi4/kernel_defconfig
+++ b/buildroot-external/board/rpi4/kernel_defconfig
@@ -1,4 +1,6 @@
+CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_LZ4=y
 CONFIG_DEFAULT_HOSTNAME="localhost"
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+CONFIG_CMDLINE=""
