updated to buildroot 2022.05 and adapted all our dependencies and kernel to 5.15.x with changes applied.

--- a/buildroot-external/board/intelnuc/kernel_defconfig
+++ b/buildroot-external/board/intelnuc/kernel_defconfig
@@ -39,20 +39,18 @@ CONFIG_KEXEC=y
 CONFIG_CRASH_DUMP=y
 # CONFIG_ACPI_BATTERY is not set
 CONFIG_ACPI_DOCK=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_X86_ACPI_CPUFREQ=y
 CONFIG_INTEL_IDLE=y
 CONFIG_IA32_EMULATION=y
-CONFIG_EFI_VARS=y
 # CONFIG_VIRTUALIZATION is not set
 CONFIG_JUMP_LABEL=y
+# CONFIG_GCC_PLUGINS is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
-# CONFIG_UNUSED_SYMBOLS is not set
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_MAC_PARTITION=y
 CONFIG_BSD_DISKLABEL=y
@@ -142,6 +140,7 @@ CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_DEBUG_DEVRES=y
 CONFIG_CONNECTOR=y
+CONFIG_EFI_VARS=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_NVME_MULTIPATH=y
 CONFIG_NVME_FC=y
@@ -149,7 +148,6 @@ CONFIG_MISC_RTSX_PCI=y
 CONFIG_MISC_RTSX_USB=m
 CONFIG_BLK_DEV_SD=y
 CONFIG_BLK_DEV_SR=y
-CONFIG_BLK_DEV_SR_VENDOR=y
 CONFIG_CHR_DEV_SG=y
 CONFIG_SCSI_CONSTANTS=y
 CONFIG_SCSI_SPI_ATTRS=y
@@ -167,7 +165,7 @@ CONFIG_TIGON3=y
 CONFIG_NET_TULIP=y
 CONFIG_E100=y
 CONFIG_E1000=y
-# CONFIG_E1000E is not set
+CONFIG_E1000E=y
 CONFIG_IGB=y
 CONFIG_IGC=y
 CONFIG_SKY2=y
@@ -177,7 +175,6 @@ CONFIG_R8169=y
 CONFIG_FDDI=y
 CONFIG_IWLWIFI=m
 CONFIG_IWLMVM=m
-CONFIG_INPUT_POLLDEV=y
 CONFIG_INPUT_MOUSEDEV=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_JOYSTICK=y
@@ -205,11 +202,8 @@ CONFIG_POWER_RESET=y
 CONFIG_WATCHDOG=y
 CONFIG_DRM=y
 CONFIG_DRM_I915=y
-CONFIG_FB_MODE_HELPERS=y
-CONFIG_FB_TILEBLITTING=y
+CONFIG_FB=y
 CONFIG_FB_EFI=y
-CONFIG_VGACON_SOFT_SCROLLBACK=y
-CONFIG_VGACON_SOFT_SCROLLBACK_SIZE=128
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_SOUND=y
 CONFIG_SND=y
@@ -316,9 +310,9 @@ CONFIG_AMD_IOMMU=y
 CONFIG_AMD_IOMMU_V2=m
 CONFIG_INTEL_IOMMU=y
 CONFIG_INTEL_IOMMU_SVM=y
+CONFIG_RAS=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS=y
-CONFIG_RAS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_F2FS_FS=y
