--- a/buildroot-external/configs/tinkerboard_defconfig
+++ b/buildroot-external/configs/tinkerboard_defconfig
@@ -10,7 +10,7 @@ BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_THINROOT_PATH)/patches"
 # BR2_COMPILER_PARANOID_UNSAFE_PATH is not set
 BR2_RELRO_PARTIAL=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
-BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_10=y
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_15=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_LTO=y
 BR2_TARGET_GENERIC_HOSTNAME="thinroot"
@@ -30,7 +30,7 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/tinkerboard/po
 BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_THINROOT_PATH)/board/tinkerboard"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.10.104"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.15.50"
 BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_THINROOT_PATH)/board/tinkerboard/kernel-patches"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_THINROOT_PATH)/board/tinkerboard/kernel_defconfig"
@@ -71,13 +71,16 @@ BR2_PACKAGE_MESA3D_OPENGL_EGL=y
 BR2_PACKAGE_MESA3D_OPENGL_ES=y
 BR2_PACKAGE_PSPLASH=y
 BR2_PACKAGE_PSPLASH_PATCH="$(BR2_EXTERNAL_THINROOT_PATH)/patches/psplash/hzdr"
-BR2_PACKAGE_QT5BASE_OPENGL=y
 BR2_PACKAGE_QT5BASE_OPENGL_ES2=y
 BR2_PACKAGE_QT5BASE_LINUXFB=y
 BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
+BR2_PACKAGE_QT5BASE_GIF=y
+BR2_PACKAGE_QT5LOCATION=y
+BR2_PACKAGE_QT5MULTIMEDIA=y
+BR2_PACKAGE_QT5SENSORS=y
+BR2_PACKAGE_QT5WEBENGINE=y
 BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_XSERVER_XORG_SERVER=y
-BR2_PACKAGE_XLIB_LIBXSCRNSAVER=y
 BR2_PACKAGE_XLIB_LIBXAW=y
 BR2_PACKAGE_XAPP_XPROP=y
 BR2_PACKAGE_XAPP_XRANDR=y
@@ -89,13 +92,10 @@ BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBDEV=y
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBTURBO=y
 BR2_PACKAGE_XFONT_FONT_MISC_CYRILLIC=y
 BR2_PACKAGE_NODM=y
-BR2_PACKAGE_QT_WEBKIT_KIOSK=y
-BR2_PACKAGE_QT_WEBKIT_KIOSK_SOUNDS=y
 BR2_PACKAGE_XDOTOOL=y
 BR2_PACKAGE_OPENBOX=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_ACPID=y
-BR2_PACKAGE_DBUS=y
 BR2_PACKAGE_EUDEV_RULES_GEN=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_RNG_TOOLS=y
@@ -106,13 +106,11 @@ BR2_PACKAGE_UBOOT_TOOLS_DUMPIMAGE=y
 BR2_PACKAGE_USBMOUNT=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBGCRYPT=y
+BR2_PACKAGE_LEVELDB=y
 BR2_PACKAGE_CAIRO_PNG=y
-BR2_PACKAGE_JPEG=y
 BR2_PACKAGE_OPENJPEG=y
 BR2_PACKAGE_WAYLAND=y
-BR2_PACKAGE_WEBP=y
-BR2_PACKAGE_WEBP_DEMUX=y
-BR2_PACKAGE_LIBXSLT=y
+BR2_PACKAGE_WOFF2=y
 BR2_PACKAGE_LIBSOUP=y
 BR2_PACKAGE_LIBTASN1=y
 BR2_PACKAGE_READLINE=y
@@ -157,3 +155,4 @@ BR2_PACKAGE_THINLINC=y
 BR2_PACKAGE_HOTKEYD=y
 BR2_PACKAGE_NUMLOCKX=y
 BR2_PACKAGE_XPRINTIDLE=y
+BR2_PACKAGE_QT_WEBENGINE_KIOSK=y
