--- a/buildroot-external/board/rpi3/genimage.cfg
+++ b/buildroot-external/board/rpi3/genimage.cfg
@@ -12,6 +12,7 @@ image boot.vfat {
       "bcm2710-rpi-cm3.dtb",
       "bcm2837-rpi-3-a-plus.dtb",
       "bcm2837-rpi-cm3-io3.dtb",
+      "bcm2710-rpi-zero-2.dtb",
       "cmdline.txt",
       "config.txt",
       "bootEnv.txt",
@@ -37,6 +38,7 @@ image boot.vfat {
 image sdcard.img {
   hdimage {
     disk-signature = 0xDEEDBEEF
+    partition-table-type = "mbr"
   }
 
   partition boot {
