--- a/buildroot-external/board/rpi4_32/genimage.cfg
+++ b/buildroot-external/board/rpi4_32/genimage.cfg
@@ -10,13 +10,19 @@ image boot.vfat {
       "cmdline.txt",
       "config.txt",
       "bootEnv.txt",
-      "rpi-firmware/fixup.dat",
-      "rpi-firmware/start.elf",
       "rpi-firmware/overlays",
       "rpi-eeprom/pieeprom.upd",
       "rpi-eeprom/pieeprom.sig",
       "u-boot.bin",
       "boot.scr"
+    }
+
+    file fixup.dat {
+      image = "rpi-firmware/fixup4.dat"
+    }
+
+    file start.elf {
+      image = "rpi-firmware/start4.elf"
     }
 
     file thinroot-Image {
@@ -33,6 +39,7 @@ image boot.vfat {
 image sdcard.img {
   hdimage {
     disk-signature = 0xDEEDBEEF
+    partition-table-type = "mbr"
   }
 
   partition boot {
