--- a/buildroot-external/configs/rpi3_defconfig
+++ b/buildroot-external/configs/rpi3_defconfig
@@ -8,7 +8,7 @@ BR2_OPTIMIZE_2=y
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_THINROOT_PATH)/patches"
 BR2_RELRO_PARTIAL=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
-BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_10=y
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_15=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_LTO=y
 BR2_TARGET_GENERIC_HOSTNAME="thinroot"
@@ -28,7 +28,7 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/rpi3/post-imag
 BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_THINROOT_PATH)/board/rpi3"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
-BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="https://github.com/raspberrypi/linux/archive/1.20210831.tar.gz"
+BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="https://github.com/raspberrypi/linux/archive/1.20220331.tar.gz"
 BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_THINROOT_PATH)/board/rpi3/kernel-patches"
 BR2_LINUX_KERNEL_DEFCONFIG="bcmrpi3"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_THINROOT_PATH)/board/rpi3/kernel_defconfig"
@@ -62,21 +62,22 @@ BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_LIBERATION=y
 BR2_PACKAGE_FREERDP=y
 BR2_PACKAGE_MESA3D=y
-BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_KMSRO=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_SWRAST=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_V3D=y
-BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_VC4=y
 BR2_PACKAGE_MESA3D_OPENGL_GLX=y
 BR2_PACKAGE_MESA3D_OPENGL_ES=y
 BR2_PACKAGE_PSPLASH=y
 BR2_PACKAGE_PSPLASH_PATCH="$(BR2_EXTERNAL_THINROOT_PATH)/patches/psplash/hzdr"
-BR2_PACKAGE_QT5BASE_OPENGL=y
 BR2_PACKAGE_QT5BASE_OPENGL_ES2=y
 BR2_PACKAGE_QT5BASE_LINUXFB=y
 BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
+BR2_PACKAGE_QT5BASE_GIF=y
+BR2_PACKAGE_QT5LOCATION=y
+BR2_PACKAGE_QT5MULTIMEDIA=y
+BR2_PACKAGE_QT5SENSORS=y
+BR2_PACKAGE_QT5WEBENGINE=y
 BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_XSERVER_XORG_SERVER=y
-BR2_PACKAGE_XLIB_LIBXSCRNSAVER=y
 BR2_PACKAGE_XLIB_LIBXAW=y
 BR2_PACKAGE_XAPP_XPROP=y
 BR2_PACKAGE_XAPP_XRANDR=y
@@ -88,17 +89,17 @@ BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBDEV=y
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBTURBO=y
 BR2_PACKAGE_XFONT_FONT_MISC_CYRILLIC=y
 BR2_PACKAGE_NODM=y
-BR2_PACKAGE_QT_WEBKIT_KIOSK=y
-BR2_PACKAGE_QT_WEBKIT_KIOSK_SOUNDS=y
 BR2_PACKAGE_XDOTOOL=y
 BR2_PACKAGE_OPENBOX=y
+BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI=y
+BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_BT=y
+BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_WIFI=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
-BR2_PACKAGE_RPI_BT_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE=y
-BR2_PACKAGE_RPI_FIRMWARE_VERSION="1.20210805"
-BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
+BR2_PACKAGE_RPI_FIRMWARE_VERSION="1.20220331"
+BR2_PACKAGE_RPI_FIRMWARE_BOOTCODE_BIN=y
+BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI=y
 BR2_PACKAGE_ACPID=y
-BR2_PACKAGE_DBUS=y
 BR2_PACKAGE_EUDEV_RULES_GEN=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_RNG_TOOLS=y
@@ -110,13 +111,11 @@ BR2_PACKAGE_UBOOT_TOOLS_DUMPIMAGE=y
 BR2_PACKAGE_USBMOUNT=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBGCRYPT=y
+BR2_PACKAGE_LEVELDB=y
 BR2_PACKAGE_CAIRO_PNG=y
-BR2_PACKAGE_JPEG=y
 BR2_PACKAGE_OPENJPEG=y
 BR2_PACKAGE_WAYLAND=y
-BR2_PACKAGE_WEBP=y
-BR2_PACKAGE_WEBP_DEMUX=y
-BR2_PACKAGE_LIBXSLT=y
+BR2_PACKAGE_WOFF2=y
 BR2_PACKAGE_LIBSOUP=y
 BR2_PACKAGE_LIBTASN1=y
 BR2_PACKAGE_READLINE=y
@@ -154,3 +153,4 @@ BR2_PACKAGE_QUTSELECT=y
 BR2_PACKAGE_HOTKEYD=y
 BR2_PACKAGE_NUMLOCKX=y
 BR2_PACKAGE_XPRINTIDLE=y
+BR2_PACKAGE_QT_WEBENGINE_KIOSK=y
