minor buildroot package fixes according to check output.

--- a/buildroot-external/package/numlockx/Config.in
+++ b/buildroot-external/package/numlockx/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_NUMLOCKX
 	bool "numlockx"
 	help
-	  This little thingy allows you to start X with NumLock turned on
+	  This little thingy allows you to start X with NumLock
+	  turned on
 
 	  https://github.com/rg3/numlockx
