--- a/buildroot-external/package/xprintidle/Config.in
+++ b/buildroot-external/package/xprintidle/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_XPRINTIDLE
 	bool "xprintidle"
 	help
-	  a utility that queries the X server for the user's idle time and prints it to stdout
+	  a utility that queries the X server for the user's idle time
+	  and prints it to stdout
 
 	  https://github.com/g0hl1n/xprintidle
