updated buildroot default config and updated to kernel 5.15.74

--- a/buildroot-external/configs/intelnuc_defconfig
+++ b/buildroot-external/configs/intelnuc_defconfig
@@ -1,13 +1,12 @@
 BR2_x86_64=y
 BR2_x86_corei7=y
+BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_15=y
+BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_DL_DIR="$(TOPDIR)/../download"
 BR2_KERNEL_MIRROR="https://www.kernel.org/pub"
 BR2_GNU_MIRROR="http://ftp.gnu.org/pub/gnu"
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_THINROOT_PATH)/patches"
-BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
-BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_15=y
-BR2_TOOLCHAIN_BUILDROOT_CXX=y
-BR2_GCC_ENABLE_LTO=y
 BR2_TARGET_GENERIC_HOSTNAME="thinroot"
 BR2_TARGET_GENERIC_ISSUE="Welcome to thinRoot"
 BR2_TARGET_GENERIC_PASSWD_SHA512=y
@@ -25,7 +24,7 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/post-
 BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.15.50"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.15.74"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/kernel_defconfig"
 BR2_LINUX_KERNEL_LZ4=y
@@ -50,9 +49,10 @@ BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_LIBERATION=y
 BR2_PACKAGE_FREERDP=y
 BR2_PACKAGE_MESA3D=y
-BR2_PACKAGE_MESA3D_DRI_DRIVER_I915=y
-BR2_PACKAGE_MESA3D_DRI_DRIVER_I965=y
-BR2_PACKAGE_MESA3D_DRI_DRIVER_RADEON=y
+BR2_PACKAGE_MESA3D_LLVM=y
+BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_I915=y
+BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_IRIS=y
+BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_SWRAST=y
 BR2_PACKAGE_MESA3D_VULKAN_DRIVER_INTEL=y
 BR2_PACKAGE_MESA3D_OPENGL_GLX=y
 BR2_PACKAGE_MESA3D_OPENGL_EGL=y
@@ -94,7 +94,9 @@ BR2_PACKAGE_EUDEV_RULES_GEN=y
 BR2_PACKAGE_RNG_TOOLS=y
 BR2_PACKAGE_USBMOUNT=y
 BR2_PACKAGE_CA_CERTIFICATES=y
+BR2_PACKAGE_LIBDRM_RADEON=y
 BR2_PACKAGE_LIBUSB=y
+BR2_PACKAGE_LLVM_RTTI=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_OBEX=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
