added missing CROCUS gallium driver and include the mesa3d demos for the time being so that we will have glxinfo and glxgears tool.

--- a/buildroot-external/configs/intelnuc_defconfig
+++ b/buildroot-external/configs/intelnuc_defconfig
@@ -47,9 +47,11 @@ BR2_PACKAGE_F2FS_TOOLS=y
 BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_LIBERATION=y
+BR2_PACKAGE_MESA3D_DEMOS=y
 BR2_PACKAGE_FREERDP=y
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_LLVM=y
+BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_CROCUS=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_I915=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_IRIS=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_SWRAST=y
