enable fq_codel network scheduler in all kernel configs and enable it in global sysctl.conf for improved network performance.

--- a/buildroot-external/board/intelnuc/kernel_defconfig
+++ b/buildroot-external/board/intelnuc/kernel_defconfig
@@ -107,6 +107,8 @@ CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_NET_SCHED=y
+CONFIG_NET_SCH_FQ_CODEL=y
+CONFIG_NET_SCH_DEFAULT=y
 CONFIG_NET_EMATCH=y
 CONFIG_NET_CLS_ACT=y
 CONFIG_BT=m
