--- a/buildroot-external/board/rpi4_32/kernel_defconfig
+++ b/buildroot-external/board/rpi4_32/kernel_defconfig
@@ -4,3 +4,5 @@ CONFIG_KERNEL_LZ4=y
 CONFIG_DEFAULT_HOSTNAME="localhost"
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_CMDLINE=""
+CONFIG_NET_SCH_DEFAULT=y
+CONFIG_NET_SCH_FQ_CODEL=y
