--- a/buildroot-external/rootfs-overlay/etc/sysctl.conf
+++ b/buildroot-external/rootfs-overlay/etc/sysctl.conf
@@ -25,7 +25,7 @@ net.core.rmem_max = 4194304
 net.core.wmem_max = 4194304
 
 # use fq_codel net scheduler
-#net.core.default_qdisc = fq_codel
+net.core.default_qdisc = fq_codel
 
 # reduce swappiness
 vm.swappiness = 10
