added missing qt5virtualkeyboard dependency.

--- a/buildroot-external/package/qt-kiosk-browser/Config.in
+++ b/buildroot-external/package/qt-kiosk-browser/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_QT_KIOSK_BROWSER
 	bool "qt-kiosk-browser"
 	select BR2_PACKAGE_QT5WEBENGINE
+	select BR2_PACKAGE_QT5VIRTUALKEYBOARD
 	help
 	  Simple Qt-based kiosk browser
