updated intelnuc_defconfig to reflect/fix latest buildroot 2023.02 changes in config setup

--- a/buildroot-external/configs/intelnuc_defconfig
+++ b/buildroot-external/configs/intelnuc_defconfig
@@ -33,6 +33,7 @@ BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_THINROOT_PATH)/Busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
+BR2_PACKAGE_FFMPEG=y
 # BR2_PACKAGE_FFMPEG_FFMPEG is not set
 BR2_PACKAGE_FFMPEG_XCBGRAB=y
 BR2_PACKAGE_PULSEAUDIO=y
@@ -59,6 +60,7 @@ BR2_PACKAGE_MESA3D_OPENGL_EGL=y
 BR2_PACKAGE_MESA3D_OPENGL_ES=y
 BR2_PACKAGE_PSPLASH=y
 BR2_PACKAGE_PSPLASH_PATCH="$(BR2_EXTERNAL_THINROOT_PATH)/patches/psplash/hzdr"
+BR2_PACKAGE_QT5BASE_OPENGL=y
 BR2_PACKAGE_QT5BASE_OPENGL_ES2=y
 BR2_PACKAGE_QT5BASE_OPENGL_LIB=y
 BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
@@ -120,4 +122,3 @@ BR2_PACKAGE_THINLINC=y
 BR2_PACKAGE_HOTKEYD=y
 BR2_PACKAGE_NUMLOCKX=y
 BR2_PACKAGE_XPRINTIDLE=y
-BR2_PACKAGE_QT_KIOSK_BROWSER=y
