fix release workflow and release template

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,7 +96,7 @@ jobs:
 
   build:
     permissions:
-      contents: write  # actions/upload-release-asset
+      contents: write  # shogo82148/actions-upload-release-asset
     name: Release build [${{ matrix.platform }}]
     if: github.repository == 'jens-maus/thinRoot'
     runs-on: ubuntu-22.04
@@ -144,7 +144,7 @@ jobs:
 
       # - name: remote debug tmate session
       #   uses: mxschmitt/action-tmate@v1
-      #   if: matrix.platform == 'ova'
+      #   if: matrix.platform == 'intelnuc'
 
       # major build step
       - name: Build
@@ -161,23 +161,17 @@ jobs:
       #######################
       # release uploads
       - name: Upload release snapshot [intelnuc]
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ needs.release_draft.outputs.upload_url }}
           asset_path: release/thinroot-${{ needs.release_draft.outputs.version }}-${{ matrix.platform }}.img
-          asset_name: thinroot-${{ needs.release_draft.outputs.version }}-${{ matrix.platform }}.img
           asset_content_type: application/octet-stream
 
       - name: Upload build release checksum [intelnuc]
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ needs.release_draft.outputs.upload_url }}
           asset_path: release/thinroot-${{ needs.release_draft.outputs.version }}-${{ matrix.platform }}.img.sha256
-          asset_name: thinroot-${{ needs.release_draft.outputs.version }}-${{ matrix.platform }}.img.sha256
           asset_content_type: text/plain
 
       #######################
@@ -211,9 +205,6 @@ jobs:
             while read -r line; do
               NEEDLE=$(echo "${line}" | awk '{print $3}' | sed 's/.*-\(.*\..*\)$/\1/')
               SHACKS=$(echo "${line}" | awk '{print $2}')
-              if [[ "${NEEDLE##*.}" == "ova" ]]; then
-                NEEDLE="ova"
-              fi
               sed -i "s/XSHA${NEEDLE}X/${SHACKS}/" release-template.md/release-template.md
             done < <(cat ${f})
           done
