add first changes for kernel 6.6 modifications.

--- a/buildroot-external/configs/intelnuc.config
+++ b/buildroot-external/configs/intelnuc.config
@@ -1,5 +1,6 @@
 BR2_x86_64=y
 BR2_x86_corei7=y
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_6_6=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_DL_DIR="$(TOPDIR)/../download"
 BR2_KERNEL_MIRROR="https://www.kernel.org/pub"
@@ -22,10 +23,9 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/post-
 BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="6.1.18"
-BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/kernel-patches"
-BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/kernel_defconfig"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="6.6.21"
+BR2_LINUX_KERNEL_DEFCONFIG="x86_64"
+BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_EQ3_PATH)/kernel/6.6/global.config $(BR2_EXTERNAL_EQ3_PATH)/kernel/6.6/device-support.config $(BR2_EXTERNAL_EQ3_PATH)/kernel/6.6/device-support-pci.config $(BR2_EXTERNAL_EQ3_PATH)/kernel/6.6/security-x86_64.config $(BR2_EXTERNAL_EQ3_PATH)/kernel/6.6/security.config $(BR2_EXTERNAL_EQ3_PATH)/board/intelnuc/kernel.config"
 BR2_LINUX_KERNEL_LZ4=y
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_LINUX_KERNEL_NEEDS_HOST_LIBELF=y
