first working version with kernel 6.6 and buildroot 2024.02.1

--- a/buildroot-external/kernel/6.1/security.config
+++ b/buildroot-external/kernel/6.1/security.config
@@ -6,11 +6,11 @@ CONFIG_PANIC_TIMEOUT=-1
 # kernel module settings
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_FORCE=y
-CONFIG_MODULE_SIG_ALL=y
-CONFIG_MODULE_SIG_SHA512=y
-CONFIG_MODULE_SIG_HASH="sha512"
+# CONFIG_MODULE_SIG is not set
+# CONFIG_MODULE_SIG_FORCE is not set
+# CONFIG_MODULE_SIG_ALL is not set
+# CONFIG_MODULE_SIG_SHA512 is not set
+# CONFIG_MODULE_SIG_HASH is not set
 CONFIG_MODULE_COMPRESS_NONE=y
 
 # Make sure kernel page tables have safe permissions.
@@ -61,9 +61,9 @@ CONFIG_SECURITY_LANDLOCK=y
 # CONFIG_SECURITY_WRITABLE_HOOKS is not set
 
 # Enable "lockdown" LSM for bright line between the root user and kernel memory.
-CONFIG_SECURITY_LOCKDOWN_LSM=y
-CONFIG_SECURITY_LOCKDOWN_LSM_EARLY=y
-CONFIG_LOCK_DOWN_KERNEL_FORCE_CONFIDENTIALITY=y
+# CONFIG_SECURITY_LOCKDOWN_LSM is not set
+# CONFIG_SECURITY_LOCKDOWN_LSM_EARLY is not set
+# CONFIG_LOCK_DOWN_KERNEL_FORCE_CONFIDENTIALITY is not set
 
 # Perform usercopy bounds checking. (And disable fallback to gain full whitelist enforcement.)
 CONFIG_HARDENED_USERCOPY=y
@@ -86,7 +86,7 @@ CONFIG_PAGE_POISONING=y
 # Instead of "slub_debug=P" and "page_poison=1", a single place can control memory allocation wiping now.
 # The init_on_free is only needed if there is concern about minimizing stale data lifetime.
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
-CONFIG_INIT_ON_FREE_DEFAULT_ON=y
+# CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
 
 # Initialize all stack variables on function entry. (Clang and GCC 12+ builds only. For earlier GCC, see CONFIG_GCC_PLUGIN_STRUCTLEAK_BYREF_ALL=y below)
 CONFIG_INIT_STACK_ALL_ZERO=y
