--- a/buildroot-external/kernel/6.1/global.config
+++ b/buildroot-external/kernel/6.1/global.config
@@ -32,7 +32,7 @@ CONFIG_HW_RANDOM=y
 # CONFIG_VIRTUALIZATION is not set
 
 # disable serial device bus support
-CONFIG_SERIAL_DEV_BUS=m
+# CONFIG_SERIAL_DEV_BUS is not set
 
 # disable lirc
 # CONFIG_LIRC is not set
@@ -46,8 +46,12 @@ CONFIG_SERIAL_DEV_BUS=m
 # disable Video4Linux
 # CONFIG_VIDEO_DEV is not set
 
-# disable sound support
-# CONFIG_SOUND is not set
+# enable sound support
+CONFIG_SOUND=m
+CONFIG_SND=m
+CONFIG_SND_HDA=m
+CONFIG_SND_USB=y
+CONFIG_SND_USB_AUDIO=y
 # CONFIG_SPEAKUP is not set
 
 # disable accessibility support
@@ -102,12 +106,11 @@ CONFIG_PREEMPT=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 
-# enable zram and disable zswap because we
-# don't have any swap device/file
-CONFIG_ZRAM=y
-CONFIG_ZRAM_DEF_COMP_LZ4=y
+# disable zram and co because not required
+# CONFIG_ZRAM is not set
 # CONFIG_ZSWAP is not set
 # CONFIG_Z3FOLD is not set
+# CONFIG_ZSMALLOC is not set
 
 # enable Multi-Gen LRU for improved performance unter memory pressure
 CONFIG_LRU_GEN=y
@@ -129,17 +132,12 @@ CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_IOSTAT=y
-CONFIG_NTFS_FS=y
-CONFIG_NTFS_RW=y
-CONFIG_SQUASHFS=m
-CONFIG_SQUASHFS_XATTR=y
-CONFIG_SQUASHFS_LZ4=y
+# CONFIG_NTFS_FS is not set
+# CONFIG_SQUASHFS is not set
 CONFIG_BTRFS_FS=m
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-CONFIG_CIFS=m
-CONFIG_CIFS_XATTR=y
-CONFIG_CIFS_POSIX=y
-CONFIG_CIFS_DFS_UPCALL=y
+CONFIG_FAT_DEFAULT_CODEPAGE=850
+# CONFIG_CIFS is not set
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_TMPFS_XATTR=y
@@ -149,12 +147,18 @@ CONFIG_TMPFS_XATTR=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
 CONFIG_MSDOS_PARTITION=y
+# CONFIG_MAC_PARTITION is not set
+# CONFIG_BSD_DISKLABEL is not set
+
+# disable quota support
+# CONFIG_QUOTA is not set
 
 # enable raid/lvm support
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_DM_VERITY=y
+# CONFIG_BLK_DEV_BSGLIB is not set
 
 # audit support
 CONFIG_AUDIT=y
@@ -190,84 +194,18 @@ CONFIG_IPV6_SIT=m
 CONFIG_IP_MROUTE=y
 CONFIG_IPV6_MROUTE=y
 
-# enable bridge support
-CONFIG_BRIDGE=y
+# disable network bridge support
+# CONFIG_BRIDGE is not set
 
-# enable Netfilter nf_tables support
-CONFIG_NF_TABLES=m
-CONFIG_NF_TABLES_INET=y
-CONFIG_NF_TABLES_NETDEV=y
-CONFIG_NF_TPROXY_IPV4=m
-CONFIG_NF_TABLES_IPV4=y
-CONFIG_NF_TABLES_ARP=y
-CONFIG_NF_TPROXY_IPV6=m
-CONFIG_NF_TABLES_IPV6=y
-CONFIG_NF_TABLES_BRIDGE=m
-CONFIG_NF_FLOW_TABLE=m
-CONFIG_NFT_NUMGEN=m
-CONFIG_NFT_CT=m
-CONFIG_NFT_FLOW_OFFLOAD=m
-CONFIG_NFT_CONNLIMIT=m
-CONFIG_NFT_LOG=m
-CONFIG_NFT_LIMIT=m
-CONFIG_NFT_MASQ=m
-CONFIG_NFT_REDIR=m
-CONFIG_NFT_NAT=m
-CONFIG_NFT_TUNNEL=m
-CONFIG_NFT_OBJREF=m
-CONFIG_NFT_QUEUE=m
-CONFIG_NFT_QUOTA=m
-CONFIG_NFT_REJECT=m
-CONFIG_NFT_REJECT_INET=m
-CONFIG_NFT_COMPAT=m
-CONFIG_NFT_HASH=m
-CONFIG_NFT_FIB=m
-CONFIG_NFT_FIB_INET=m
-CONFIG_NFT_XFRM=m
-CONFIG_NFT_SOCKET=m
-CONFIG_NFT_OSF=m
-CONFIG_NFT_TPROXY=m
-CONFIG_NFT_SYNPROXY=m
-CONFIG_NFT_DUP_NETDEV=m
-CONFIG_NFT_FWD_NETDEV=m
-CONFIG_NFT_FIB_NETDEV=m
-CONFIG_NFT_REJECT_NETDEV=m
-CONFIG_NFT_REJECT_IPV4=m
-CONFIG_NFT_DUP_IPV4=m
-CONFIG_NFT_FIB_IPV4=m
-CONFIG_NFT_REJECT_IPV6=m
-CONFIG_NFT_DUP_IPV6=m
-CONFIG_NFT_FIB_IPV6=m
-CONFIG_NFT_BRIDGE_META=m
-CONFIG_NFT_BRIDGE_REJECT=m
-CONFIG_NETFILTER_ADVANCED=y
-CONFIG_NETFILTER_NETLINK_QUEUE=y
-CONFIG_NETFILTER_XT_SET=m
-CONFIG_NETFILTER_XT_MATCH_PKTTYPE=m
+# disable Netfilter nf_tables support
+# CONFIG_NF_TABLES is not set
 
-# enable IP set support
-CONFIG_IP_SET=m
-CONFIG_IP_SET_BITMAP_IP=m
-CONFIG_IP_SET_BITMAP_IPMAC=m
-CONFIG_IP_SET_BITMAP_PORT=m
-CONFIG_IP_SET_HASH_IP=m
-CONFIG_IP_SET_HASH_IPMARK=m
-CONFIG_IP_SET_HASH_IPPORT=m
-CONFIG_IP_SET_HASH_IPPORTIP=m
-CONFIG_IP_SET_HASH_IPPORTNET=m
-CONFIG_IP_SET_HASH_IPMAC=m
-CONFIG_IP_SET_HASH_MAC=m
-CONFIG_IP_SET_HASH_NETPORTNET=m
-CONFIG_IP_SET_HASH_NET=m
-CONFIG_IP_SET_HASH_NETNET=m
-CONFIG_IP_SET_HASH_NETPORT=m
-CONFIG_IP_SET_HASH_NETIFACE=m
-CONFIG_IP_SET_LIST_SET=m
-CONFIG_IP_VS=m
-CONFIG_IP_VS_IPV6=y
+# disable IP set support
+# CONFIG_IP_SET is not set
+# CONFIG_IP_VS is not set
 
-# enable virtual ip tunneling
-CONFIG_NET_IPVTI=m
+# disable virtual ip tunneling
+# CONFIG_NET_IPVTI is not set
 
 # network scheduler settings
 CONFIG_NET_SCHED=y
@@ -283,18 +221,18 @@ CONFIG_CFG80211=m
 CONFIG_CFG80211_WEXT=y
 # CONFIG_CFG80211_CRDA_SUPPORT is not set
 
-# network tunnel settings
-CONFIG_TUN=y
-CONFIG_VLAN_8021Q=m
-CONFIG_VLAN_8021Q_GVRP=y
-CONFIG_VLAN_8021Q_MVRP=y
+# disable network tunnel settings
+# CONFIG_TUN is not set
+# CONFIG_VLAN_8021Q is not set
+# CONFIG_VLAN_8021Q_GVRP is not set
+# CONFIG_VLAN_8021Q_MVRP is not set
 
-# enable ip/udp tunnels
-CONFIG_NET_IP_TUNNEL=m
-CONFIG_NET_UDP_TUNNEL=m
+# disable ip/udp tunnels
+# CONFIG_NET_IP_TUNNEL is not set
+# CONFIG_NET_UDP_TUNNEL is not set
 
-# wireguard support
-CONFIG_WIREGUARD=m
+# disable wireguard support
+# CONFIG_WIREGUARD is not set
 
 # human interface devices support
 CONFIG_HID=y
@@ -319,10 +257,15 @@ CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 # userspace LED support
 CONFIG_LEDS_USER=m
 
+# enable leds class flash
+CONFIG_LEDS_CLASS_FLASH=m
+
 # native language/codepage support
 CONFIG_NLS=y
 CONFIG_NLS_DEFAULT="utf8"
 CONFIG_NLS_CODEPAGE_437=y
+CONFIG_NLS_CODEPAGE_850=y
+CONFIG_NLS_CODEPAGE_1250=y
 CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
@@ -330,3 +273,39 @@ CONFIG_NLS_UTF8=y
 # detect hanging tasks after 120s
 CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
+
+# set some ACPI options
+# CONFIG_ACPI_BATTERY is not set
+# CONFIG_ACPI_SLEEP is not set
+CONFIG_ACPI_APEI=y
+CONFIG_ACPI_APEI_GHES=y
+
+# disable CGROUP (not needed by thinclient)
+# CONFIG_CGROUP is not set
+# CONFIG_BLK_CGROUP is not set
+# CONFIG_CGROUP_PIDS is not set
+# CONFIG_CGROUP_RDMA is not set
+# CONFIG_CGROUP_HUGETLB is not set
+# CONFIG_CGROUP_DEVICE is not set
+# CONFIG_CGROUP_PERF is not set
+# CONFIG_CGROUP_MISC is not set
+# CONFIG_CGROUP_DEBUG is not set
+# CONFIG_SOCK_CGROUP_DATA is not set
+
+# disable some debugging to safe space
+# CONFIG_KALLSYMS_ALL is not set
+# CONFIG_PM_DEBUG is not set
+# CONFIG_KPROBES is not set
+# CONFIG_NET_9P is not set
+
+# disable unnecessary stuff
+# CONFIG_EFI_MIXED is not set
+# CONFIG_SUSPEND is not set
+# CONFIG_MEDIA_CEC_SUPPORT is not set
+# CONFIG_HYPERVISOR_GUEST is not set
+# CONFIG_HIBERNATION is not set
+# CONFIG_BACKLIGHT_CLASS_DEVICE is not set
+
+# disable virtio support
+# CONFIG_VIRTIO_MENU is not set
+# CONFIG_VIRTIO_CONSOLE is not set
