--- a/buildroot-external/kernel/6.6/device-support.config
+++ b/buildroot-external/kernel/6.6/device-support.config
@@ -4,30 +4,34 @@ CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_HID=y
 CONFIG_USB_HIDDEV=y
 
-CONFIG_USBIP_CORE=m
-CONFIG_USBIP_VHCI_HCD=m
-CONFIG_USBIP_VHCI_HC_PORTS=8
-CONFIG_USBIP_VHCI_NR_HCS=1
-CONFIG_USBIP_HOST=m
-CONFIG_USBIP_VUDC=m
+# disable USB<>IP support
+# CONFIG_USBIP_CORE is not set
 
-CONFIG_USB_SERIAL=y
-CONFIG_USB_SERIAL_CONSOLE=y
-CONFIG_USB_SERIAL_GENERIC=y
-CONFIG_USB_SERIAL_OPTION=m
-CONFIG_USB_SERIAL_WWAN=m
-CONFIG_USB_SERIAL_SIMPLE=m
-CONFIG_USB_SERIAL_CP210X=m
-CONFIG_USB_SERIAL_FTDI_SIO=m
-CONFIG_USB_SERIAL_PL2303=m
-CONFIG_USB_SERIAL_CH341=m
-CONFIG_USB_SERIAL_TI=m
-CONFIG_USB_SERIAL_KEYSPAN=m
+# disable USB serial support
+# CONFIG_USB_SERIAL is not set
 
 CONFIG_USB_ACM=m
 
-# enable USB gadget support
-CONFIG_USB_GADGET=y
+# enable USB storage support
+CONFIG_USB_STORAGE=y
+CONFIG_USB_STORAGE_REALTEK=m
+CONFIG_REALTEK_AUTOPM=y
+CONFIG_USB_STORAGE_DATAFAB=m
+CONFIG_USB_STORAGE_FREECOM=m
+CONFIG_USB_STORAGE_ISD200=m
+CONFIG_USB_STORAGE_USBAT=m
+CONFIG_USB_STORAGE_SDDR09=m
+CONFIG_USB_STORAGE_SDDR55=m
+CONFIG_USB_STORAGE_JUMPSHOT=m
+CONFIG_USB_STORAGE_ALAUDA=m
+CONFIG_USB_STORAGE_ONETOUCH=m
+CONFIG_USB_STORAGE_KARMA=m
+CONFIG_USB_STORAGE_CYPRESS_ATACB=m
+CONFIG_USB_STORAGE_ENE_UB6250=m
+CONFIG_USB_UAS=m
+
+# disable USB gadget support
+# CONFIG_USB_GADGET is not set
 
 # USB Network Adapters
 CONFIG_USB_NET_DRIVERS=m
@@ -80,9 +84,9 @@ CONFIG_RT2800USB_UNKNOWN=y
 # CONFIG_MEDIA_SUPPORT is not set
 # CONFIG_MEDIA_TUNER is not set
 
-# GPIO support
-CONFIG_GPIOLIB=y
-CONFIG_GPIO_SYSFS=y
+# disable GPIO support
+# CONFIG_GPIOLIB is not set
+# CONFIG_GPIO_SYSFS is not set
 
 # Staging quality drivers
 CONFIG_STAGING=y
@@ -90,8 +94,10 @@ CONFIG_STAGING=y
 # disable USB PRINTER
 # CONFIG_USB_PRINTER is not set
 
-# 1-wire
-CONFIG_W1=y
-CONFIG_W1_MASTER_DS2490=m
-CONFIG_W1_MASTER_DS2482=m
-CONFIG_W1_MASTER_GPIO=m
+# disable 1-wire
+# CONFIG_W1 is not set
+
+# DRM options
+CONFIG_DRM_DISPLAY_HELPER=y
+CONFIG_DRM_TTM=y
+CONFIG_DRM_BUDDY=y
